Facebook and twitter cards + IXO Grupo typos.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,14 +1,23 @@
 <head>
   <!-- title -->
-  <title>Jansu — Experiencias excelentes a traves de conocer al cliente — Una propuesta de Linking Paths</title>
+  <title>Jansu — Hacia la experiencia gastronómica perfecta de la mano del cliente. — Una propuesta de Linking Paths</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1" />
-  <meta name="author" content="ThemeZaa">
-  <!-- description -->
-  <meta name="description" content="POFO is a highly creative, modern, visually stunning and Bootstrap responsive multipurpose agency and portfolio HTML5 template with 25 ready home page demos.">
-  <!-- keywords -->
-  <meta name="keywords" content="creative, modern, clean, bootstrap responsive, html5, css3, portfolio, blog, agency, templates, multipurpose, one page, corporate, start-up, studio, branding, designer, freelancer, carousel, parallax, photography, personal, masonry, grid, coming soon, faq">
+  <meta name="description" content="Jansu es la respuesta de Linking Paths al #RetoIXO, un desafío lanzado por IXO Grupo, una solución que presenta los pilares para conseguir la excelencia en las experiencias gastronómicas a traves de un conocimiento 360º de los clientes.">
+
+  <meta content="Jansu es la respuesta de Linking Paths al #RetoIXO, un desafío lanzado por IXO Grupo, una solución que presenta los pilares para conseguir la excelencia en las experiencias gastronómicas a traves de un conocimiento 360º de los clientes." property="og:description" />
+  <meta content="/images/retoixo/facebook_card.jpg" property="og:image" />
+  <meta content="Jansu — Hacia la experiencia gastronómica perfecta de la mano del cliente. — Una propuesta de Linking Paths" property="og:title" />
+  <meta content="https://retoixo.linkingpaths.com/" property="og:url" />
+  <meta content="summary_large_image" name="twitter:card" />
+  <meta content="Jansu es la respuesta de Linking Paths al #RetoIXO, un desafío lanzado por IXO Grupo, una solución que presenta los pilares para conseguir la excelencia en las experiencias gastronómicas a traves de un conocimiento 360º de los clientes." name="twitter:description" />
+  <meta content="/images/retoixo/twitter_card.jpg" name="twitter:image" />
+  <meta content="@linkingpaths" name="twitter:site" />
+  <meta content="Jansu — Hacia la experiencia gastronómica perfecta de la mano del cliente. — Una propuesta de Linking Paths" name="twitter:title" />
+  <meta content="https://retoixo.linkingpaths.com" name="twitter:url" />
+
+
   <!-- favicon -->
   <link rel="shortcut icon" href="images/favicon.png">
   <link rel="apple-touch-icon" href="images/apple-touch-icon-57x57.png">
