--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
             <ul class="nav navbar-nav navbar-left text-right no-margin alt-font text-normal width-40 sm-width-100 sm-text-left" data-in="fadeIn" data-out="fadeOut">
               <li class="dropdown megamenu-fw">
                 <a href="#challenge" class="inner-link">
-                  <span class="visible-xs">El reto Grupo IXO</span>
+                  <span class="visible-xs">El reto IXO Grupo</span>
                   <span class="hidden-xs">El reto</s>
                 </a>
               </li>
