--- a/_includes/retoixo/afterword/text.html
+++ b/_includes/retoixo/afterword/text.html
@@ -11,7 +11,7 @@
         </h5>
         <p class="text-medium text-light-gray xs-text-left">
           Y para hacerlo primero debemos conocerle lo mejor posible. Cualquier iniciativa que elimine nichos de información dentro
-          del Grupo IXO y automatice su procesamiento nos nos da una ventaja competitiva. Todo esto debe conseguirse reconociendo
+          del IXO Grupo y automatice su procesamiento nos nos da una ventaja competitiva. Todo esto debe conseguirse reconociendo
           el carácter global de la clientela y la casuística de los restaurantes que lo integran y poniendo las herramientas
           tecnológicas necesarias a su servicio.
         </p>
