--- a/_includes/retoixo/cloud/flexibility.html
+++ b/_includes/retoixo/cloud/flexibility.html
@@ -10,7 +10,7 @@
             Pegamento tecnológico para centrarse en el negocio.
           </h4>
           <p class="width-80 md-width-100 text-medium">
-            El Grupo IXO debe aprovechar el ecosistema Cloud actual que permite integrar nuevos servicios tecnológicos a una velocidad increíble mientras se mantienen con unos costes bajos.
+            IXO Grupo debe aprovechar el ecosistema Cloud actual que permite integrar nuevos servicios tecnológicos a una velocidad increíble mientras se mantienen con unos costes bajos.
           </p>
           <p class="width-80 md-width-100 text-medium">
             La autogestión y monitorización que estas herramientas y plataformas hacen de sus propios servicios permiten que el equipo desarrollador de la solución se concentre en aportar valor donde el Grupo lo necesita y no en la infraestructura que lo sostiene.
