--- a/_includes/retoixo/cloud/global.html
+++ b/_includes/retoixo/cloud/global.html
@@ -10,7 +10,7 @@
             Diseño global desde el minuto cero.
           </h4>
           <p class="width-80 md-width-100 text-medium">
-            No sólo los clientes se encuentran dispersos por todo el mundo, sino que los propios miembros del Grupo IXO se pueden incorporar cada vez desde más puntos diferentes del planeta.
+            No sólo los clientes se encuentran dispersos por todo el mundo, sino que los propios miembros de IXO Grupo se pueden incorporar cada vez desde más puntos diferentes del planeta.
           </p>
           <p class="width-80 md-width-100 text-medium">
             La solución tienen que contemplar este hecho no solo a nivel conceptual, sino también a nivel tecnológico proporcionando a cada usuario una experiencia de primer nivel, se encuentre donde se encuentre.
