--- a/_includes/retoixo/customer/index.html
+++ b/_includes/retoixo/customer/index.html
@@ -40,7 +40,7 @@
           <span class="alt-font display-block text-uppercase text-small">Perfiles</span>
           <span class="text-uppercase alt-font text-extra-large font-weight-700 margin-20px-bottom display-block">Perfiles</span>
           <p class="text-medium">
-            Es fundamental acabar con cualquier silo de información que se encuentre aislado dentro del Grupo IXO y unificar todos los datos de un
+            Es fundamental acabar con cualquier silo de información que se encuentre aislado dentro de IXO Grupo y unificar todos los datos de un
             mismo cliente en una visión única y completa.
           </p>
         </div>
