--- a/_includes/retoixo/customer/profiles.html
+++ b/_includes/retoixo/customer/profiles.html
@@ -10,7 +10,7 @@
             Las mil caras de un cliente.
           </h4>
           <p class="width-80 md-width-100 text-medium">
-            Cuanto más conocemos a un cliente, mejor experiencia y servicio podemos darle. Por eso, es fundamental acabar con cualquier silo de información que se encuentre aislado dentro del Grupo IXO y unificar todos los datos de un mismo cliente en una visión única y completa.
+            Cuanto más conocemos a un cliente, mejor experiencia y servicio podemos darle. Por eso, es fundamental acabar con cualquier silo de información que se encuentre aislado dentro de IXO Grupo y unificar todos los datos de un mismo cliente en una visión única y completa.
           </p>
           <p class="width-80 md-width-100 text-medium">
             Y no nos tenemos que quedar aquí. Actualmente existen multiples servicios que permiten enriquecer el perfil de cualquier usuario con la información publica que existe del mismo (redes sociales, empresa, etc.)
