--- a/_includes/retoixo/ml/ai.html
+++ b/_includes/retoixo/ml/ai.html
@@ -21,7 +21,7 @@
             La técnicas de <em>Machine Learning</em> que se han popularizado en los últimos 5 años dependen de un factor clave para su implementación: una ingente cantidad de datos.
           </p>
           <p class="width-80 md-width-100 text-medium">
-            Por eso, en un contexto como el del Grupo IXO estas herramientas pueden ser una oportunidad única para ayudar a la toma de decisiones: predicción de reservas para cada día, diseño de pricing en base a localización, detección de problemas durante el servicio…
+            Por eso, en un contexto como el de IXO Grupo estas herramientas pueden ser una oportunidad única para ayudar a la toma de decisiones: predicción de reservas para cada día, diseño de pricing en base a localización, detección de problemas durante el servicio…
           </p>
           <p class="alt-font text-uppercase font-weight-600 text-link-extra-dark-gray text-small">
             <strong>Keywords: PyTorch, Machine Learning, Accurate predictions </strong>
