--- a/_includes/retoixo/ml/index.html
+++ b/_includes/retoixo/ml/index.html
@@ -26,7 +26,7 @@
           <i class="icon-dial icon-extra-medium margin-25px-bottom margin-25px-top sm-margin-20px-bottom xs-margin-15px-bottom color-cloud"></i>
           <div class="alt-font text-extra-dark-gray font-weight-600 margin-10px-bottom">Automatización</div>
           <p class="text-medium">
-            No todo requiere inteligencia artificial. Automatizar tareas cotidianas como el envío de informes puede marcar la diferencia e incrementar la eficiencia del Grupo IXO.
+            No todo requiere inteligencia artificial. Automatizar tareas cotidianas como el envío de informes puede marcar la diferencia e incrementar la eficiencia de IXO Grupo.
           </p>
         </div>
       </div>
