--- a/_includes/retoixo/cloud/index.html
+++ b/_includes/retoixo/cloud/index.html
@@ -16,7 +16,7 @@
         <div class="bg-white box-shadow-light text-center padding-twelve-all position-relative z-index-5 md-padding-six-all height-100 xs-padding-15px-lr">
           <i class="icon-global icon-extra-medium margin-25px-bottom margin-25px-top sm-margin-20px-bottom xs-margin-15px-bottom color-cloud"></i>
           <div class="alt-font text-extra-dark-gray font-weight-600 margin-10px-bottom">Global</div>
-          <p class="text-medium">La clientela y los miembros del Grupo IXO es una comunidad global y la solución tecnológica para el mismo también debe serlo.</p>
+          <p class="text-medium">La clientela y los miembros de IXO Grupo es una comunidad global y la solución tecnológica para el mismo también debe serlo.</p>
         </div>
       </div>
       <div class="col-md-4 col-sm-6 col-xs-12 sm-margin-30px-bottom">
@@ -33,7 +33,7 @@
           <i class="icon-adjustments icon-extra-medium margin-25px-bottom margin-25px-top sm-margin-20px-bottom xs-margin-15px-bottom color-cloud"></i>
           <div class="alt-font text-extra-dark-gray font-weight-600 margin-10px-bottom">Flexibilidad</div>
           <p class="text-medium">
-            El negocio del Grupo IXO es ofrecer las mejores experiencias gastronómicas del planeta, no gestionar infraestructura tecnológica.
+            El negocio de IXO Grupo es ofrecer las mejores experiencias gastronómicas del planeta, no gestionar infraestructura tecnológica.
           </p>
         </div>
       </div>
