--- a/_includes/retoixo/intro/challenge.html
+++ b/_includes/retoixo/intro/challenge.html
@@ -26,7 +26,7 @@
             y el sistema <em>legacy</em> que actualmente se usa para gestionar la información de sus clientes es un silo desconectado del resto de procesos del grupo.
           </p>
           <p class="text-medium line-height-30">
-            En las <a class="text-link-white text-white-hover text-decoration-underline" href="">bases del desafío</a> no se especificaban la infraestructura, procesos y sistemas que se utilizan
+            En las <a class="text-link-white text-white-hover text-decoration-underline" href="/images/retoixo/bases.pdf">bases del desafío</a> no se especificaban la infraestructura, procesos y sistemas que se utilizan
             actualmente, ni se describían en detalle las principales problemáticas que IXO Grupo encuentra en la
             gestión de sus clientes. Por ello, en vez de usar una bola de cristal e imaginar cuales son éstas, enfocamos nuestra propuesta como un exploración inicial de los pilares que entendemos
             deben sostener una solución tecnológica que busque gestionar experiencias gastronómicas de manera integral.
