--- a/_includes/head.html
+++ b/_includes/head.html
@@ -53,4 +53,18 @@
   <!--[if IE]>
             <script src="js/html5shiv.js"></script>
         <![endif]-->
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-330937-17"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-330937-17');
+  </script>
+
 </head>
