Fix typo on segments.

--- a/_includes/retoixo/customer/segments.html
+++ b/_includes/retoixo/customer/segments.html
@@ -82,7 +82,7 @@
               <i class="icon-trophy icon-extra-medium margin-15px-bottom"></i>
               <span class="text-large alt-font display-block margin-10px-bottom">¿Qué clientes han probado cada menu desgustación desde que abrimos? </span>
               <div class="details">
-                <p class="width-65 center-col text-medium text-extra-dark-gray">Participamos en un evento en Oslo la próxima semana que nos gustaría promocionar.</p>
+                <p class="width-65 center-col text-medium text-extra-dark-gray">Queremos testear el nuevo menu en evento cerrado con nuestros incondicionales.</p>
               </div>
             </figure>
           </div>
