Change twitter and facebook image references.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,12 +7,12 @@
   <meta name="description" content="Jansu es la respuesta de Linking Paths al #RetoIXO, un desafío lanzado por IXO Grupo, una solución que presenta los pilares para conseguir la excelencia en las experiencias gastronómicas a traves de un conocimiento 360º de los clientes.">
 
   <meta content="Jansu es la respuesta de Linking Paths al #RetoIXO, un desafío lanzado por IXO Grupo, una solución que presenta los pilares para conseguir la excelencia en las experiencias gastronómicas a traves de un conocimiento 360º de los clientes." property="og:description" />
-  <meta content="/images/retoixo/facebook_card.jpg" property="og:image" />
+  <meta content="https://retoixo.linkingpaths.com/images/retoixo/facebook_card.jpg" property="og:image" />
   <meta content="Jansu — Hacia la experiencia gastronómica perfecta de la mano del cliente. — Una propuesta de Linking Paths" property="og:title" />
   <meta content="https://retoixo.linkingpaths.com/" property="og:url" />
   <meta content="summary_large_image" name="twitter:card" />
   <meta content="Jansu es la respuesta de Linking Paths al #RetoIXO, un desafío lanzado por IXO Grupo, una solución que presenta los pilares para conseguir la excelencia en las experiencias gastronómicas a traves de un conocimiento 360º de los clientes." name="twitter:description" />
-  <meta content="/images/retoixo/twitter_card.jpg" name="twitter:image" />
+  <meta content="https://retoixo.linkingpaths.com/images/retoixo/twitter_card.jpg" name="twitter:image" />
   <meta content="@linkingpaths" name="twitter:site" />
   <meta content="Jansu — Hacia la experiencia gastronómica perfecta de la mano del cliente. — Una propuesta de Linking Paths" name="twitter:title" />
   <meta content="https://retoixo.linkingpaths.com" name="twitter:url" />
